# pork

./: CMakeLists.txt  main.cpp  main.py
UI_Part/: UI_Base.py  Ui.py
UI_part/: Mat_list.cpp
Vision_Part/: Vision.py  Vision_Base.py
vision_parts/: pytorch_deepstudy.cpp  pytorch_deepstudy.h  recognize_part_VirtualBase.h  study_part_VirtualBase.h
